nenolod     2005/10/22 08:19:50 UTC	(20051022-3091)
  Log:
  Updates to expire_check(), as noted by terminal.
  Reviewed by me!
  

  Changes:	Modified:
  +1 -1		trunk/src/node.c (File Modified) 


alambert    2005/10/22 08:17:12 UTC	(20051022-3089)
  Log:
  various: If we don't care about the return value, don't bother storing it.

  Changes:	Modified:
  +4 -8		trunk/src/function.c (File Modified) 
  +1 -2		trunk/src/node.c (File Modified) 


pfish       2005/10/22 08:14:18 UTC	(20051022-3087)
  Log:
  Finish up KEEPTOPIC support. Should work now, enjoy.
  

  Changes:	Modified:
  +28 -69	trunk/modules/chanserv/set.c (File Modified) 


alambert    2005/10/22 08:08:57 UTC	(20051022-3085)
  Log:
  myuser_delete(): When removing a myuser, remove any linked nicknames that point to them. Committing so pfish can test.

  Changes:	Modified:
  +15 -1	trunk/src/node.c (File Modified) 


nenolod     2005/10/22 08:00:29 UTC	(20051022-3083)
  Log:
  Remove old #if 0'ed code for the new sexy myuser_notice() routine which jilles wrote.
  
  Reviewed by everyone who was in #atheme.coders at 3 AM. :P
  

  Changes:	Modified:
  +1 -4		trunk/src/node.c (File Modified) 


pfish       2005/10/22 07:58:46 UTC	(20051022-3081)
  Log:
  Make config file aware of KEEPTOPIC cflag.
  

  Changes:	Modified:
  +5 -4		trunk/src/conf.c (File Modified) 


terminal    2005/10/22 07:03:47 UTC	(20051022-3079)
  Log:
  Bail out of most functions when a channel is closed
  

  Changes:	Modified:
  +6 -0		trunk/modules/chanserv/akick.c (File Modified) 
  +6 -0		trunk/modules/chanserv/ban.c (File Modified) 
  +6 -0		trunk/modules/chanserv/clear_bans.c (File Modified) 
  +6 -0		trunk/modules/chanserv/clear_users.c (File Modified) 
  +6 -0		trunk/modules/chanserv/count.c (File Modified) 
  +10 -0	trunk/modules/chanserv/drop.c (File Modified) 
  +18 -0	trunk/modules/chanserv/flags.c (File Modified) 
  +6 -0		trunk/modules/chanserv/ftransfer.c (File Modified) 